# Nectere

./: .gitignore  .gitmodules  CMakeLists.txt  Nectere.drawio  NectereConfig.json  README.md  install.bat
Nectere/: AApplicationHandler.cpp  AApplicationHandler.hpp  ACommand.cpp  ACommand.hpp  AUser.cpp  AUser.hpp  Application.cpp  Application.hpp  ApplicationManager.cpp  ApplicationManager.hpp  CMakeLists.txt  Canal.cpp  Canal.hpp  CanalManager.cpp  CanalManager.hpp  Client.cpp  Client.hpp  Configuration.cpp  Configuration.hpp  DynamicLibrary.hpp  Event.hpp  IDGenerator.cpp  IDGenerator.hpp  ISessionHandler.hpp  Logger.cpp  Logger.hpp  Manager.cpp  Manager.hpp  Nectere.cpp  Nectere.h  NectereEventCode.hpp  NectereExecutable.cpp  NectereExecutable.hpp  Ptr.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  StringUtils.cpp  StringUtils.hpp  (+18 more)
Nectere/Command/: ACanalCommand.cpp  ACanalCommand.hpp  ANectereCommand.cpp  ANectereCommand.hpp  ApplicationListCommand.cpp  ApplicationListCommand.hpp  AuthCommand.cpp  AuthCommand.hpp  CMakeLists.txt  CommandListCommand.cpp  CommandListCommand.hpp  CreateCanalCommand.cpp  CreateCanalCommand.hpp  DeleteCanalCommand.cpp  DeleteCanalCommand.hpp  JoinCanalCommand.cpp  JoinCanalCommand.hpp  LeaveCanalCommand.cpp  LeaveCanalCommand.hpp  ListCanalCommand.cpp  ListCanalCommand.hpp  MessageCanalCommand.cpp  MessageCanalCommand.hpp  NectereEventCode.hpp  PingCommand.cpp  PingCommand.hpp  ReloadAppCommand.cpp  ReloadAppCommand.hpp  StopCommand.cpp  StopCommand.hpp  TemplateCommand.cpp  TemplateCommand.hpp  UnloadAppCommand.cpp  UnloadAppCommand.hpp
Nectere/Concurrency/: AThreadSystem.hpp  CMakeLists.txt  Task.cpp  Task.hpp  TaskResult.hpp  Thread.cpp  Thread.hpp  ThreadSystem.cpp  ThreadSystem.hpp
Nectere/Discord/: Discord.cpp  Discord.h
Nectere/Dp/: CMakeLists.txt  Format.hpp  Json.cpp  Json.hpp  Node.cpp  Node.hpp  Result.cpp  Result.hpp  Serializer.cpp  Serializer.hpp  StringUtils.cpp  StringUtils.hpp  Xml.cpp  Xml.hpp  nectere_dp_export.h
Nectere/Network/: AServer.cpp  AServer.hpp  ApplicationEventReceiver.cpp  ApplicationEventReceiver.hpp  BoostNetworkServer.cpp  BoostNetworkServer.hpp  BoostNetworkUser.cpp  BoostNetworkUser.hpp  Boost_Server.cpp  Boost_Server.hpp  Boost_Session.cpp  Boost_Session.hpp  CMakeLists.txt  Header.hpp  Helper.cpp  Helper.hpp  IEventReceiver.hpp  NetworkPortParameter.cpp  NetworkPortParameter.hpp  NetworkWhitelistParameter.cpp  NetworkWhitelistParameter.hpp  Server.cpp  Server.hpp  WindowsNetworkServer.cpp  WindowsNetworkServer.hpp  WindowsNetworkUser.cpp  WindowsNetworkUser.hpp  Windows_Server.cpp  Windows_Server.hpp  Windows_Session.cpp  Windows_Session.hpp
Nectere/Parameters/: AuthParameter.cpp  AuthParameter.hpp  CMakeLists.txt  LogInFileParameter.cpp  LogInFileParameter.hpp  LogPathParameter.cpp  LogPathParameter.hpp  NetworkPortParameter.cpp  NetworkPortParameter.hpp  ScriptEngineSmartBuildParameter.cpp  ScriptEngineSmartBuildParameter.hpp  VerboseParameter.cpp  VerboseParameter.hpp  nectere_parameters_export.h
Nectere/Script/: ACaster.hpp  API.h  CMakeLists.txt  CallStack.cpp  CallStack.hpp  Callable.cpp  Callable.hpp  Caster.cpp  Caster.hpp  CodingStyle.cpp  CodingStyle.hpp  CurrentEnvironment.cpp  CurrentEnvironment.hpp  DeclaredObjectDefinition.cpp  DeclaredObjectDefinition.hpp  EVariableType.hpp  Function.cpp  Function.hpp  ILinkerWrapper.hpp  IResolutionTreeOperation.hpp  Interpreter.cpp  Interpreter.hpp  Linker.hpp  LinkerWrapper.hpp  LocalScope.cpp  LocalScope.hpp  Native.cpp  Native.hpp  NativeCaster.hpp  NativeStringCaster.cpp  NativeStringCaster.hpp  NativeUtils.hpp  ObjectLinker.hpp  Parameter.cpp  Parameter.hpp  PrimitiveLinker.hpp  ResolutionTree.cpp  ResolutionTree.hpp  ResolutionTreeUtils.cpp  ResolutionTreeUtils.hpp  (+22 more)
Nectere/Script/NativeFunction/: DeclaredObjectFunction.hpp  RawFunction.hpp  VoidFunction.cpp  VoidFunction.hpp
Nectere/Script/UnitTyper/: ArrayTyper.cpp  ArrayTyper.hpp  BoolTyper.cpp  BoolTyper.hpp  CharTyper.cpp  CharTyper.hpp  DoubleTyper.cpp  DoubleTyper.hpp  FloatTyper.cpp  FloatTyper.hpp  IntTyper.cpp  IntTyper.hpp  LongDoubleTyper.cpp  LongDoubleTyper.hpp  LongLongTyper.cpp  LongLongTyper.hpp  LongTyper.cpp  LongTyper.hpp  ObjectTyper.cpp  ObjectTyper.hpp  ShortTyper.cpp  ShortTyper.hpp  StringTyper.cpp  StringTyper.hpp  Typer.hpp  TyperArray.cpp  TyperArray.hpp  UnsignedCharTyper.cpp  UnsignedCharTyper.hpp  UnsignedIntTyper.cpp  UnsignedIntTyper.hpp  UnsignedLongLongTyper.cpp  UnsignedLongLongTyper.hpp  UnsignedLongTyper.cpp  UnsignedLongTyper.hpp  UnsignedShortTyper.cpp  UnsignedShortTyper.hpp  VoidTyper.cpp  VoidTyper.hpp
Nectere/Twitch/: Twitch.cpp  Twitch.h
Nectere/parg/: CMakeLists.txt  parg.c  parg.h  parg_def.h  parg_export.h
NectereClient/: CMakeLists.txt  CommandTreater.cpp  CommandTreater.hpp  Connection.cpp  Connection.hpp  Defines.hpp  NecterePrompt.cpp  NecterePrompt.hpp  Prompt.cpp  Prompt.hpp  main.cpp
NectereClientTest/: CMakeLists.txt  Event.hpp  main.cpp
NectereDiscord/: CMakeLists.txt
template/modules/: CMakeLists.txt  Module.cpp  build.bat
