include_directories(..)

set(LIB_NAME ${NAME}Concurrency)
set(NECTERE_DEPENDENCIES)
set(LIB_VERSION_MAJOR 1)
set(LIB_VERSION_MINOR 0)
set(LIB_VERSION_PATCH 0)
set(LIB_VERSION ${LIB_VERSION_MAJOR}.${LIB_VERSION_MINOR}.${LIB_VERSION_PATCH})

set(CONCURRENCY_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/Task.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Task.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/TaskResult.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Thread.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Thread.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/ThreadSystem.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ThreadSystem.hpp)
	
add_library(${LIB_NAME} ${CONCURRENCY_SOURCES})
target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})