include_directories(..)

set(LIB_NAME ${NAME}Script)
set(NECTERE_DEPENDENCIES)
set(LIB_VERSION_MAJOR 1)
set(LIB_VERSION_MINOR 0)
set(LIB_VERSION_PATCH 0)
set(LIB_VERSION ${LIB_VERSION_MAJOR}.${LIB_VERSION_MINOR}.${LIB_VERSION_PATCH})

set(SCRIPT_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/NativeFunction/DeclaredObjectFunction.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/NativeFunction/RawFunction.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/NativeFunction/VoidFunction.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/NativeFunction/VoidFunction.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/ArrayTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/ArrayTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/BoolTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/BoolTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/CharTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/CharTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/DoubleTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/DoubleTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/FloatTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/FloatTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/IntTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/IntTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/LongDoubleTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/LongDoubleTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/LongLongTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/LongLongTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/LongTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/LongTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/ObjectTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/ObjectTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/ShortTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/ShortTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/StringTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/StringTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/Typer.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/TyperArray.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/TyperArray.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/UnsignedCharTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/UnsignedCharTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/UnsignedIntTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/UnsignedIntTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/UnsignedLongLongTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/UnsignedLongLongTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/UnsignedLongTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/UnsignedLongTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/UnsignedShortTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/UnsignedShortTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/VoidTyper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UnitTyper/VoidTyper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/ACaster.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Callable.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Callable.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/CallStack.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CallStack.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Caster.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Caster.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/CodingStyle.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CodingStyle.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/CurrentEnvironment.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CurrentEnvironment.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/DeclaredObjectDefinition.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/DeclaredObjectDefinition.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/EVariableType.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Function.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Function.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/ILinkerWrapper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Interpreter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Interpreter.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/IResolutionTreeOperation.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Linker.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/LinkerWrapper.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/LocalScope.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/LocalScope.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Native.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Native.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/NativeCaster.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/NativeStringCaster.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/NativeStringCaster.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/ObjectLinker.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Parameter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Parameter.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/PrimitiveLinker.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/ResolutionTree.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ResolutionTree.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/ResolutionTreeUtils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ResolutionTreeUtils.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Script.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Script.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/ScriptLoader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ScriptLoader.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Signature.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Signature.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/SingleScriptParser.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SingleScriptParser.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/StringLinker.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/SubTypeLinker.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Tag.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Taggable.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Taggable.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Unit.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Unit.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Variable.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Variable.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/VariableDefinition.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/VariableType.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/VariableType.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/VariableTypeHelper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/VariableTypeHelper.hpp)

add_library(${LIB_NAME} ${SCRIPT_SOURCES})
target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})